fixed issue with retrieving ID from Yelp taking too long

--- a/src/index.css
+++ b/src/index.css
@@ -139,42 +139,66 @@ code {
   display: flex;
   flex-direction: column;
   background-color: black;
-  width: 100%;
-  height: auto;
+  max-width: 50vw;
 }
 
 .iwin-header {
   flex: 1 0 0;
   color: white;
-  font-size: 1em;
+  font-size: 1.5em;
   font-weight: bold;
+  margin: 5px;
 }
 
 .iwin-body {
+  flex: 2 0 0;
   display: flex;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
   align-items: top;
+  margin: 5px;
+  width: 100%;
 }
 
 .iwin-picframe {
-  max-width: 50%;
+  max-width: 48%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  align-items: top;
+  
 }
 .iwin-photo {
   object-fit: contain;
 }
 
 .iwin-details {
-  
-  min-width: 50%;
+  max-width: 48%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.iwin-review {
+  color: white;
+  max-width: 100%;
+  height: auto;
+}
+
+.iwin-reviewer {
+  font-style: italic;
 }
 
 .iwin-footer {
-  
+  flex: 1 0 0;
+  color: white;
+  margin: 5px;
 }
+
+.iwin-logo {
+  width: 100px;
+  height: auto;
+}
+
+
 
 @media screen and (min-width: 660px)
 {
